--- a/Webapp/style.css
+++ b/Webapp/style.css
@@ -4,7 +4,7 @@ body{
 }
 
 .lightStatus{
-  margin-top: 40%;
+  margin-top: 20%;
   color: white;
   font-family: Verdana;
 }
@@ -18,7 +18,8 @@ body{
   font-family: Verdana;
   padding: 10px;
 }
-..secondtButton{
+.secondButton{
+  /* margin-top: 50%; */
   font-size: 1.5em;
   font-family: Verdana;
   padding: 10px;
