--- a/Webapp/style.css
+++ b/Webapp/style.css
@@ -1,9 +1,10 @@
 body{
-  text-align: center;
   background-color: #2E4053;
+  margin: 0;
+  color: white;
 }
 
-.lightStatus{
+/* .lightStatus{
   margin-top: 20%;
   color: white;
   font-family: Verdana;
@@ -20,7 +21,31 @@ body{
 }
 .secondButton{
   /* margin-top: 50%; */
-  font-size: 1.5em;
+  /* font-size: 1.5em;
   font-family: Verdana;
   padding: 10px;
+} */
+/* here is the new code  */
+.new_heading{
+  position: relative;
+  background-color: darkcyan;
+  text-align: center;
+}
+.light_new{
+  background-color: rgb(19, 117, 204);
+  width: 600px;
+  height: 100px;
+  text-align: center;
+  margin: 5px;
+  display: inline-block;
+  position: relative;
+  top: 5px;
+}
+.button_container{
+  background-color: coral;
+  display: inline-block;
+  width: 300px;
+  height: 100px;
+  position: relative;
+  top: 110px;
 }
