--- a/Webapp/style.css
+++ b/Webapp/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #212121;
+  background-color: #9e9e9e;
   margin: 0;
   /* color: white; */
   /* text-align: center; */
@@ -9,7 +9,7 @@ body {
 
 .all-container {
   position: relative;
-  background-color: #ad1457;
+  background-color: #212121;
   /* text-align: center; */
   border-radius: 10px;
   margin: 10px auto;
@@ -22,8 +22,8 @@ body {
 
 .leds-statue-container {
   background-color: #424242;
-  width: 400px;
-  height: 210px;
+  width: 430px;
+  height: 230px;
   display: inline-block;
   border-radius: 5px;
   position: absolute;
@@ -33,12 +33,30 @@ body {
   /* text-align: center; */
 }
 
-.button_container {}
+/* 
+font-family: 'Bree Serif', serif;
+
+font-family: 'Acme', sans-serif;
+
+font-family: 'Montserrat', sans-serif;
+
+//*******
+font-family: 'Lobster', cursive;
+font-family: 'Squada One', cursive;
+ */
+.button-g1 {
+  font-family: 'Squada One', cursive;
+}
+
+.btn-g1 {
+  background-color: #424242;
+  color: #f5f5f5;
+}
 
 #lighstat {
-  color: #e0e0e0;
-  font-size: 20pt;
-  font-family: "Roboto Mono", monospace;
+  color: #f5f5f5;
+  font-size: 25pt;
+  font-family: 'Lobster', cursive;
   font-weight: 700;
   display: inline-block;
   position: absolute;
@@ -51,8 +69,8 @@ button {}
 
 .tags-statue {
   display: inline-block;
-  font-family: "Bitter", serif;
-  font-size: 1.8rem;
+  font-family: "Roboto Mono", monospace;
+  font-size: 2rem;
   position: absolute;
   /* bottom: 10px; */
   font-weight: 600;
@@ -63,24 +81,10 @@ button {}
   top: 3%;
 }
 
-.action-button {
-  margin-top: 10px;
-  font-family: "Roboto Mono", monospace;
-  font-weight: 900;
-  margin-top: 10px;
-  width: 120px;
-}
-
-#symbol-ard {
-  display: inline-block;
-  position: absolute;
-  right: 10px;
-  border-radius: 5px;
-}
 
 .form-one {
   position: absolute;
-  top: 210px;
+  top: 230px;
   font-family: "Roboto Mono", monospace;
   font-size: 1rem;
   font-weight: 900;
@@ -90,6 +94,10 @@ button {}
 
 #text-group-1 {
   margin: 10px 0;
+}
+
+.btn-g1-text {
+  font-size: 17pt;
 }
 
 #label-text-area {
@@ -102,9 +110,26 @@ button {}
 }
 
 #text-area {
-  width: 480px;
+  width: 475px;
 }
 
+/* All the Images */
+/* ard synbol height="115px" width="200px" */
+#symbol-ard {
+  display: inline-block;
+  position: absolute;
+  right: 10px;
+  border-radius: 5px;
+}
+
+
+#plant-img {
+  position: absolute;
+  top: 130px;
+  right: 15px;
+  width: 200px;
+  height: 190px;
+}
 
 
 /* 
@@ -113,4 +138,8 @@ font-family: 'Bree Serif', serif;
 font-family: 'Acme', sans-serif;
 
 font-family: 'Montserrat', sans-serif;
+
+//*******
+font-family: 'Lobster', cursive;
+font-family: 'Squada One', cursive;
  */
