--- a/Webapp/style.css
+++ b/Webapp/style.css
@@ -63,6 +63,17 @@ font-family: 'Squada One', cursive;
   left: 120px;
 }
 
+#lighstat2 {
+  color: #f5f5f5;
+  font-size: 25pt;
+  font-family: 'Lobster', cursive;
+  font-weight: 700;
+  display: inline-block;
+  position: absolute;
+  left: 120px;
+  top: 70px;
+}
+
 #primery {}
 
 button {}
@@ -79,6 +90,11 @@ button {}
 #led1-state {
   color: #ff9800;
   top: 3%;
+}
+
+#led2-state {
+  color: #ff9800;
+  top: 30%;
 }
 
 
@@ -111,6 +127,10 @@ button {}
 
 #text-area {
   width: 475px;
+  text-align: left;
+  padding-top: 20px;
+  padding-left: 40px;
+  font-weight: 900;
 }
 
 /* All the Images */
@@ -122,7 +142,6 @@ button {}
   border-radius: 5px;
 }
 
-
 #plant-img {
   position: absolute;
   top: 130px;
@@ -131,6 +150,19 @@ button {}
   height: 190px;
 }
 
+#led-img {
+  position: absolute;
+  right: 5px;
+  height: 50px;
+  top: 10px;
+}
+
+#led2-img {
+  position: absolute;
+  right: 5px;
+  height: 50px;
+  top: 70px;
+}
 
 /* 
 font-family: 'Bree Serif', serif;
